BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Meeting_Material_BMS_EMEA__c.object
<CustomObject>
    <description>VPRO Oct 2013: Object part of the Field Force Meeting module for BMS EMEA. Child object of Master File to store Materials to be delivered as part of the related Meetings.</description>
    <fields>
        <fullName>BMS_EMEA_Inherited_from_Master_File__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO Feb 2014: Together with a workflow this checkbox is ticked if the Meeting Material has been inherited from the Master File Material.</description>
        <label>zDELETE_Inherited from Master File?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FFM_Step_Meeting_BMS_EMEA__c</fullName>
        <description>VPRO EMEA Feb 2014: created the formula field. Used in a validation rule.</description>
        <formula>TEXT(  Meeting_BMS_EMEA__r.FFM_Step_BMS_EMEA__c )</formula>
        <label>FFM Step Meeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FFM_Step_Original_BMS_EMEA__c</fullName>
        <description>VPRO EMEA Feb 2014: created the field, populated through workflow. Used in a validation rule.</description>
        <label>FFM Step Original</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: Name of the Material.</description>
        <inlineHelpText>Including presentations, invitations and other items - Description</inlineHelpText>
        <label>Material</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_BMS_EMEA__c</fullName>
        <description>VPRO Oct 2013: parent Meeting.</description>
        <label>Meeting</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipName>Meeting_Materials_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ref_No_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: field used in Meeting Material layouts.</description>
        <label>Ref No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: field used in Meeting Material layouts.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be approved</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: field used in Meeting Contracts &amp; Materials layouts.</description>
        <label>Used</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Meeting Material</label>
    <nameField>
        <displayFormat>MM-{00000}</displayFormat>
        <label>Meeting Material Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Materials</pluralLabel>
    <recordTypes>
        <fullName>BMS_EMEA_Meeting_Material</fullName>
        <active>true</active>
        <description>Meeting Material related to a Field Force Meeting</description>
        <label>BMS - EMEA - Meeting Material</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_Meeting_Material_PostExec</fullName>
        <active>true</active>
        <description>Meeting Material related to a Field Force Meeting</description>
        <label>BMS - EMEA - Meeting Material PostExec</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_Meeting_Material_PostExec_PTA</fullName>
        <active>true</active>
        <description>Meeting Material related to a Field Force Meeting</description>
        <label>BMS - EMEA - Meeting Material PostExec PTA</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BMS_EMEA_FFM_Material_Co_Author</fullName>
        <active>true</active>
        <description>VPRO 27 Feb 2014: Validation to not allow a co-author of the meeting to modify any fields in the Meeting Material.</description>
        <errorConditionFormula>AND(
$User.Id &lt;&gt;  Meeting_BMS_EMEA__r.OwnerId,
TEXT(Meeting_BMS_EMEA__r.FFM_Step_BMS_EMEA__c) = &apos;Meeting Post-Execution&apos;,
OR( 
$Profile.Name = &apos;BMS - EMEA - REP - MSL&apos;, 
$Profile.Name = &apos;BMS - EMEA - REP - SALES&apos;) 
)</errorConditionFormula>
        <errorMessage>You are not allowed to change any fields as you are co-author of the Meeting.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMS_EMEA_PlanMaterialsNOKPostExecution</fullName>
        <active>true</active>
        <description>VPRO EMEA Feb 2014: Materials created during the Meeting Plan phase cannot be modified during the Post-Execution phase (expect for the Used field).</description>
        <errorConditionFormula>AND( 
OR( 
ISCHANGED(Material_BMS_EMEA__c), 
ISCHANGED(Meeting_BMS_EMEA__c) 
), 
RecordType.DeveloperName &lt;&gt; &apos;BMS_EMEA_Meeting_Material_PostExec_PTA&apos;,
FFM_Step_Meeting_BMS_EMEA__c = &apos;Meeting Post-Execution&apos;, 
FFM_Step_Original_BMS_EMEA__c = &apos;Meeting Planning&apos; 
)</errorConditionFormula>
        <errorMessage>Materials created during the Meeting Planning phase cannot be modified during the Post-Execution phase. Please Cancel.</errorMessage>
    </validationRules>
</CustomObject>